--- a/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
@@ -12,7 +12,8 @@
  * GNU General Public License for more details.
  */
 
-&int_codec {
+&soc {
+	int_codec: sound {
 	status = "okay";
 	/delete-property/ qcom,cdc-us-euro-gpios;
 	qcom,model = "msm8952-snd-card-mtp";
@@ -53,8 +54,12 @@
 		"AMIC1", "MIC BIAS External",
 		"AMIC2", "MIC BIAS External2",
 		"AMIC3", "MIC BIAS External";
+	};
+	audio_amplifier {
+		compatible = "aw,aw8738";
+		ext-spk-amp-gpio = <&tlmm 1 0>;
+	};
 };
-
 &wsa881x_i2c_f {
 	status = "disabled";
 };
