--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -673,3 +673,7 @@ CONFIG_TOUCHSCREEN_FT5435_ULYSSE_DIRECTORY="focaltech_touch"
 CONFIG_TOUCHSCREEN_GT9XX_v28=y
 CONFIG_BQ2560X_CHARGER=y
 CONFIG_BQ27426_FG=y
+CONFIG_RC_CORE=y
+CONFIG_IR_PWM=y
+CONFIG_VIB_GPIO=y
+CONFIG_ANT_CHECK=y
