--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -694,3 +694,4 @@ CONFIG_ANT_CHECK=y
 CONFIG_LEDS_MSM_GPIO_FLASH=y
 CONFIG_LEDS_MSM_BACK_GPIO_FLASH=y
 CONFIG_LEDS_AW2013=y
+CONFIG_MSMB_CAMERA_LEGACY=y
