ARM64: configs: ulysse: Enable Fingerprint

--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -679,3 +679,7 @@ CONFIG_RC_CORE=y
 CONFIG_IR_PWM=y
 CONFIG_VIB_GPIO=y
 CONFIG_ANT_CHECK=y
+
+# ugg
+CONFIG_FINGERPRINT_FPC1020_UGG=y
+CONFIG_FINGERPRINT_GF3208_UGG=y
