--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -679,6 +679,8 @@ CONFIG_RC_CORE=y
 CONFIG_IR_PWM=y
 CONFIG_VIB_GPIO=y
 CONFIG_ANT_CHECK=y
+CONFIG_LEDS_MSM_GPIO_FLASH=y
+CONFIG_LEDS_MSM_BACK_GPIO_FLASH=y
 
 # ugg
 CONFIG_FINGERPRINT_FPC1020_UGG=y
