--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -668,8 +668,13 @@ CONFIG_QMI_ENCDEC=y
 
 CONFIG_PRONTO_WLAN=y
 
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_RAM=y
+CONFIG_PSTORE_PMSG=y
+
 # ulysse
-CONFIG_CMDLINE="androidboot.usbconfigfs=true"
+CONFIG_CMDLINE="androidboot.usbconfigfs=true ramoops_memreserve=4M"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_MACH_XIAOMI_ULYSSE=y
 CONFIG_TOUCHSCREEN_FT5435_ULYSSE=y
