--- a/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
@@ -23,7 +23,7 @@
         qcom,msm-micbias2-ext-cap;
 	qcom,smg3711-enable-gpio = <&tlmm 25 0>;
 	qcom,smg3711-in-gpio = <&tlmm 16 0>;
-	qcom,hdmi-dba-codec-rx;
+	/delete-property/ qcom,hdmi-dba-codec-rx;
 
 	qcom,msm-gpios =
 		"pri_i2s",
