--- a/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
@@ -12,7 +12,8 @@
  * GNU General Public License for more details.
  */
 
-&int_codec {
+&soc {
+	int_codec: sound {
 	status = "okay";
 	qcom,model = "msm8952-snd-card-mtp";
 	qcom,msm-mbhc-hphl-swh = <1>;
@@ -24,9 +25,6 @@
 	qcom,smg3711-in-gpio = <&tlmm 16 0>;
 	/delete-property/ qcom,hdmi-dba-codec-rx;
 	/delete-property/ qcom,cdc-us-euro-gpios;
-	/delete-property/ qcom,cdc-us-eu-gpios;
-	/delete-property/ qcom,pri-mi2s-gpios;
-	/delete-property/ qcom,quin-mi2s-gpios;
 
 	qcom,msm-gpios =
 		"pri_i2s",
@@ -45,10 +43,6 @@
 	pinctrl-1 = <&cdc_pdm_lines_act &cdc_pdm_lines_2_act>;
 	pinctrl-2 = <&spk_ext_pa_active>;
 	pinctrl-3 = <&spk_ext_pa_suspend>;
-	/delete-property/ pinctrl-4;
-	/delete-property/ pinctrl-5;
-	/delete-property/ pinctrl-6;
-	/delete-property/ pinctrl-7;
     qcom,spk_ext_pa = <&tlmm 1 0>;
 	qcom,audio-routing =
 		"RX_BIAS", "MCLK",
@@ -60,48 +54,14 @@
 		"AMIC1", "MIC BIAS External",
 		"AMIC2", "MIC BIAS External2",
 		"AMIC3", "MIC BIAS External";
+	};
+	audio_amplifier {
+		compatible = "aw,aw8738";
+		ext-spk-amp-gpio = <&tlmm 1 0>;
+	};
 };
 
 &wsa881x_i2c_f {
 	status = "disable";
 };
 
-&wsa881x_211 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_212 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_213 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_214 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&cdc_us_euro_sw {
-	status = "disabled";
-};
-
-&cdc_pri_mi2s_gpios {
-	status = "disabled";
-};
-
-&cdc_quin_mi2s_gpios {
-	status = "disabled";
-};
-
-&wsa881x_analog_vi_gpio {
-	status = "disabled";
-};
-
-&wsa881x_analog_clk_gpio {
-	status = "disabled";
-};
-
-&wsa881x_analog_reset_gpio {
-	status = "disabled";
-};
