--- a/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
@@ -25,6 +25,7 @@
 	qcom,smg3711-enable-gpio = <&tlmm 25 0>;
 	qcom,smg3711-in-gpio = <&tlmm 16 0>;
 	/delete-property/ qcom,hdmi-dba-codec-rx;
+	/delete-property/ qcom,cdc-us-euro-gpios;
 
 	qcom,msm-gpios =
 		"pri_i2s",
@@ -43,10 +44,6 @@
 	pinctrl-1 = <&cdc_pdm_lines_act &cdc_pdm_lines_2_act>;
 	pinctrl-2 = <&spk_ext_pa_active>;
 	pinctrl-3 = <&spk_ext_pa_suspend>;
-	/delete-property/ pinctrl-4;
-	/delete-property/ pinctrl-5;
-	/delete-property/ pinctrl-6;
-	/delete-property/ pinctrl-7;
 	qcom,spk_ext_pa = <&tlmm 1 0>;
 	qcom,audio-routing =
 		"RX_BIAS", "MCLK",
@@ -58,9 +55,6 @@
 		"AMIC1", "MIC BIAS External",
 		"AMIC2", "MIC BIAS External2",
 		"AMIC3", "MIC BIAS External";
-	asoc-codec = <&stub_codec>, <&msm_digital_codec>, <&hdmi_dba>;
-	asoc-codec-names = "msm-stub-codec.1",
-			"msm-hdmi-dba-codec-rx";
 	};
 	audio_amplifier {
 		compatible = "aw,aw8738";
@@ -68,31 +62,6 @@
 	};
 };
 
-&ext_codec {
-	/delete-property/ qcom,pinctrl-names;
-	/delete-property/ pinctrl-names;
-	/delete-property/ pinctrl-0;
-	/delete-property/ pinctrl-1;
-	/delete-property/ pinctrl-2;
-	/delete-property/ pinctrl-3;
-};
-
 &wsa881x_i2c_f {
-	status = "disable";
-};
-
-&wsa881x_211 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_212 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_213 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_214 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
+	status = "disabled";
 };
