--- a/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common-audio.dtsi
@@ -23,8 +23,6 @@
         qcom,msm-micbias2-ext-cap;
 	qcom,smg3711-enable-gpio = <&tlmm 25 0>;
 	qcom,smg3711-in-gpio = <&tlmm 16 0>;
-	qcom,hdmi-dba-codec-rx;
-
 	qcom,msm-gpios =
 		"pri_i2s",
 		"spk_ext_pa-sw";
@@ -42,11 +40,7 @@
 	pinctrl-1 = <&cdc_pdm_lines_act &cdc_pdm_lines_2_act>;
 	pinctrl-2 = <&spk_ext_pa_active>;
 	pinctrl-3 = <&spk_ext_pa_suspend>;
-	/delete-property/ pinctrl-4;
-	/delete-property/ pinctrl-5;
-	/delete-property/ pinctrl-6;
-	/delete-property/ pinctrl-7;
-        qcom,spk_ext_pa = <&tlmm 1 0>;
+	qcom,spk_ext_pa = <&tlmm 1 0>;
 	qcom,audio-routing =
 		"RX_BIAS", "MCLK",
 		"SPK_RX_BIAS", "MCLK",
@@ -57,36 +51,12 @@
 		"AMIC1", "MIC BIAS External",
 		"AMIC2", "MIC BIAS External2",
 		"AMIC3", "MIC BIAS External";
-	asoc-codec = <&stub_codec>, <&msm_digital_codec>, <&hdmi_dba>;
-	asoc-codec-names = "msm-stub-codec.1",
-			"msm-hdmi-dba-codec-rx";
-};
-
-&ext_codec {
-	/delete-property/ qcom,pinctrl-names;
-	/delete-property/ pinctrl-names;
-	/delete-property/ pinctrl-0;
-	/delete-property/ pinctrl-1;
-	/delete-property/ pinctrl-2;
-	/delete-property/ pinctrl-3;
 };
 
 &wsa881x_i2c_f {
-	status = "disable";
+	status = "disabled";
 };
 
-&wsa881x_211 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_212 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_213 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
-};
-
-&wsa881x_214 {
-	qcom,spkr-sd-n-gpio = <&tlmm 1 0>;
+&wsa881x_i2c_45 {
+	status = "okay";
 };
