--- a/arch/arm64/boot/dts/qcom/ulysse-common/common-touchscreen.dtsi
+++ b/arch/arm64/boot/dts/qcom/ulysse-common/common-touchscreen.dtsi
@@ -81,6 +81,7 @@
             00 00 00 00 00 00 EC 01
             ];
 		touchscreen-key-map = <139 172 158>;
+		goodix,slide-wakeup = <1>;
         };
 
         focaltech@38{
