--- a/arch/arm64/configs/ulysse_defconfig
+++ b/arch/arm64/configs/ulysse_defconfig
@@ -687,3 +687,10 @@ CONFIG_TOUCHSCREEN_FT5435_ULYSSE=y
 CONFIG_TOUCHSCREEN_FT5435_ULYSSE_DIRECTORY="focaltech_touch"
 CONFIG_TOUCHSCREEN_GT9XX_v28=y
 CONFIG_PRONTO_WLAN=y
+CONFIG_BQ2560X_CHARGER=y
+CONFIG_BQ27426_FG=y
+CONFIG_VIB_GPIO=y
+CONFIG_ANT_CHECK=y
+CONFIG_LEDS_MSM_GPIO_FLASH=y
+CONFIG_LEDS_MSM_BACK_GPIO_FLASH=y
+CONFIG_LEDS_AW2013=y
