--- a/arch/arm64/boot/dts/qcom/msm8917-pmi8937-mtp-ugglite.dts
+++ b/arch/arm64/boot/dts/qcom/msm8917-pmi8937-mtp-ugglite.dts
@@ -21,6 +21,7 @@
 #include "msm8953-wsa881x.dtsi"
 #include "ulysse-common/common.dtsi"
 #include "ugglite/ugglite-msm8917.dtsi"
+#include "ugg/ugg-fingerprint.dtsi"
 
 / {
 	model = "Qualcomm Technologies, Inc. MSM8917-PMI8937 MTP";
